# github-rs

./: .appveyor.yml  .gitignore  .travis.yml  AlphaReleaseGoals.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Notes.md  README.md  appveyor.yml  auth_token.enc  index.html  search-index.js
compile_tests/: Cargo.toml
compile_tests/tests/: compiletest.rs
docs/: design.md  endpoints.md  issues.md
docs/github/: extract_docs.py
examples/: cached_responses.rs  custom_endpoint_and_adding_headers.rs  getting_started.rs  wrapping_responses.rs
github-gql-rs/: Cargo.toml  README.md
github-gql-rs/src/: client.rs  connections.rs  edges.rs  enums.rs  input_objects.rs  interfaces.rs  lib.rs  mutation.rs  objects.rs  query.rs  scalars.rs  unions.rs
github-gql-rs/tests/: users.rs
github-rs-clear/: Cargo.toml
github-rs-clear/src/: lib.rs
github_rs/: index.html  sidebar-items.js
github_rs/activity/: Activity.t.html  trait.Activity.html
github_rs/error/: GithubError.t.html  enum.GithubError.html  type.Http2Error.html  type.Result.html
github_rs/github/: GPGKey.t.html  HTML.t.html  Http2Error.t.html  PatchUser.t.html  RateLimit.t.html  RawJSON.t.html  RepoCreate.t.html  Repos.t.html  SSHKey.t.html  Users.t.html  enum.GithubError.html  index.html  sidebar-items.js  struct.Actor.html  struct.Client.html  struct.Core.html  struct.Email.html  struct.Event.html  struct.GPGKey.html  struct.GPGKeyPost.html  struct.GitIgnore.html  struct.Markdown.html  struct.Meta.html  struct.Org.html  struct.PatchUser.html  struct.Plan.html  struct.Rate.html  struct.RateLimit.html  struct.Repo.html  struct.RepoCreate.html  struct.Resources.html  struct.SSHKey.html  struct.Search.html  struct.User.html  trait.Activity.html  trait.Misc.html  trait.Repos.html  trait.Users.html  type.AccessToken.html  type.HTML.html  (+3 more)
github_rs/json/: GPGKeyPost.t.html  GitIgnore.t.html  Org.t.html  Plan.t.html  struct.Actor.html  struct.Core.html  struct.Email.html  struct.Event.html  struct.GPGKey.html  struct.GPGKeyPost.html  struct.GitIgnore.html  struct.Markdown.html  struct.Meta.html  struct.Org.html  struct.PatchUser.html  struct.Plan.html  struct.Rate.html  struct.RateLimit.html  struct.Repo.html  struct.RepoCreate.html  struct.Resources.html  struct.SSHKey.html  struct.Search.html  struct.User.html
github_rs/miscellaneous/: Misc.t.html  trait.Misc.html
github_rs/repositories/: trait.Repos.html
github_rs/types/: AccessToken.t.html  type.AccessToken.html  type.HTML.html  type.RawJSON.html
github_rs/users/: trait.Users.html
hyper/: struct.LanguageTag.html  struct.Url.html
hyper/client/: enum.Body.html  enum.RedirectPolicy.html  index.html  (+2 more)
mime/: enum.Attr.html  enum.SubLevel.html  enum.TopLevel.html  enum.Value.html
quote/: struct.ByteStr.html  struct.Hex.html  struct.Tokens.html  trait.ToTokens.html
serde_codegen/: index.html
serde_codegen_internals/: index.html
serde_derive/: fn.derive_deserialize.html  fn.derive_serialize.html  index.html
serde_json/: index.html
src/: activity.rs  client.rs  collaborators.rs  enterprise.rs  error.rs  errors.rs  gists.rs  git_data.rs  github.rs  headers.rs  issues.rs  json.rs  lib.rs  macros.rs  migration.rs  miscellaneous.rs  organizations.rs  pull_requests.rs  reactions.rs  repositories.rs  requests.rs  review.rs  search.rs  types.rs  users.rs  util.rs
syn/: enum.Abi.html  enum.AttrStyle.html  enum.BinOp.html  enum.Body.html  enum.ConstExpr.html  enum.FloatTy.html  enum.FunctionRetTy.html  enum.IntTy.html  enum.Lit.html  enum.MetaItem.html  enum.Mutability.html  enum.NestedMetaItem.html  enum.PathParameters.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Ty.html  enum.TyParamBound.html  enum.UnOp.html  enum.Unsafety.html  enum.VariantData.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse_macro_input.html  fn.parse_path.html  fn.parse_type.html  fn.parse_where_clause.html  index.html  macro.walk_list.html  sidebar-items.js  struct.AngleBracketedParameterData.html  struct.Attribute.html  struct.BareFnArg.html  struct.BareFnTy.html  struct.Field.html  struct.Generics.html  struct.Ident.html  struct.ImplGenerics.html  struct.Lifetime.html  struct.LifetimeDef.html  struct.MacroInput.html  (+13 more)
tests/: gitignore.rs  harness.rs  notifications.rs  testutil.rs  users.rs
unicode_bidi/: fn.initial_scan.html  fn.is_rtl.html  fn.reorder_line.html  fn.visual_runs.html  index.html  struct.InitialProperties.html  type.LevelRun.html
unicode_normalization/: constant.UNICODE_VERSION.html  index.html  struct.Decompositions.html  struct.Recompositions.html
unicode_xid/: constant.UNICODE_VERSION.html  index.html  trait.UnicodeXID.html
url/: enum.Host.html  index.html  struct.HostAndPort.html  struct.ParseOptions.html  struct.PathSegmentsMut.html  struct.SocketAddrs.html  struct.Url.html  struct.UrlQuery.html
(+362 files in other folders)
