[package]
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Pure Rust bindings to the Github API"
name = "github-rs"
version = "0.6.1"
license = "MIT"
repository = "https://github.com/mgattozzi/github-rs.git"
homepage = "https://github.com/mgattozzi/github-rs"
documentation = "https://docs.rs/github-rs/"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]

[badges]
travis-ci = { repository = "mgattozzi/github-rs", branch = "master" }
appveyor = { repository = "mgattozzi/github-rs", branch = "master", service = "github" }

[dependencies]
hyper = "0.11"
hyper-rustls = { version = "0.12", optional = true }
error-chain = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"

[workspaces]
members = ["github-gql-rs"]
