[package]
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Pure Rust bindings to the Github API"
name = "github-rs"
version = "0.7.0"
license = "MIT"
repository = "https://github.com/github-rs/github-rs.git"
homepage = "https://github.com/github-rs/github-rs"
documentation = "https://docs.rs/github-rs/"
edition = "2018"

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[badges]
travis-ci = { repository = "github-rs/github-rs", branch = "master" }
appveyor = { repository = "github-rs/github-rs", branch = "master", service = "github" }

[dependencies]
hyper = "0.12.27"
hyper-rustls = { version = "0.16.1", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
native-tls = { version = "0.2.2", optional = true }
error-chain = "0.12.0"
tokio-core = "0.1.17"
futures = "0.1.26"
serde = "1.0.90"
serde_json = "1.0.39"

[dev-dependencies]
serde_derive = "1.0.90"

[workspace]
members = ["github-gql-rs"]
