[package]
name = "github-gql-rs"
version = "0.0.1"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Pure Rust bindings to the Github V4 API using GraphQL"
license = "MIT/Apache-2.0"
repository = "https://github.com/mgattozzi/github-rs.git"
homepage = "https://github.com/mgattozzi/github-rs"
documentation = "https://docs.rs/github-rs/"
readme = "README.md"
keywords = []
categories = []

[badges]
travis-ci = { repository = "mgattozzi/github-rs", branch = "master" }
appveyor = { repository = "mgattozzi/github-rs", branch = "master", service = "github" }

[lib]
name = "github_gql"

[dependencies]
hyper = "0.11"
hyper-rustls = "0.11"
error-chain = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
git2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_derive = "1.0"
