[package]
name = "github-gql-rs"
version = "0.0.1"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Pure Rust bindings to the Github V4 API using GraphQL"
license = "MIT/Apache-2.0"
repository = "https://github.com/mgattozzi/github-rs.git"
homepage = "https://github.com/mgattozzi/github-rs"
documentation = "https://docs.rs/github-rs/"
readme = "README.md"
keywords = []
categories = []

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[badges]
travis-ci = { repository = "mgattozzi/github-rs", branch = "master" }
appveyor = { repository = "mgattozzi/github-rs", branch = "master", service = "github" }

[lib]
name = "github_gql"

[dependencies]
hyper = "0.11"
hyper-rustls = { version = "0.11", optional = true }
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
error-chain = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"
