[package]
name = "github-rs-clear"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "Pure Rust bindings to the Github API w/ clearly named functions"
license = "MIT"
repository = "https://github.com/mgattozzi/github-rs.git"
homepage = "https://github.com/mgattozzi/github-rs"
documentation = "https://mgattozzi.github.io/github-rs"

[dependencies]
github-rs = { path = ".." }
